--- a/message.properties
+++ b/message.properties
@@ -1,1 +1,30 @@
+# Common Configurations
+server.port=8087
+spring.cloud.config.server.git.uri=https://your-github-repo-url.git
+spring.cloud.config.server.git.clone-on-start=true
+
+# User Service Configurations
+user-service.name=User Service
+user-service.description=Handles user authentication and profile management.
+
+# Admin Service Configurations
+admin-service.name=Admin Service
+admin-service.description=Manages administrative tasks and user permissions.
+admin-service.access-level=FULL_CONTROL
+
+# Product Service Configurations
+product-service.name=Product Service
+product-service.description=Manages product inventory and details.
+
+# Cart Service Configurations
+cart-service.name=Cart Service
+cart-service.description=Handles shopping cart operations.
+
+# Order Service Configurations
+order-service.name=Order Service
+order-service.description=Processes and tracks customer orders.
+
+# Logging Configurations
+logging.level.org.springframework.cloud.config=INFO
+
 
